# physical-ai-studio

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md
.agents/skills/: physicalai-train-adding-a-policy  physicalai-train-benchmarking-a-policy  physicalai-train-training-a-policy  physicalai-train-working-with-datasets
.claude/skills/: physicalai-train-exporting-and-validating
.github/: CODEOWNERS  copilot-instructions.md  dependency_review_config.yml  labeler.yml  pull_request_template.md  renovate.json5
.github/actions/docker-build/: action.yml
.github/instructions/: lib.security.instructions.md  ui.instructions.md
.github/scripts/skills/: agent_skills.py
.github/workflows/: auto-approve.yml  backend.yml  cleanup-old-app-images.yml  codeql.yml  dependency-review.yml  docker-build.yml  docker-publish.yml  labeler.yml  library.yml  npm-audit-fix.yml  pr-title.yml  promote-rc-app-release.yml  publish-app-pypi.yml  publish-app-testpypi.yml  publish-pypi.yml  publish-rc-app.yml  publish-testpypi.yml  renovate-config-validator.yml  renovate.yml  scorecards.yml  secret-scan.yml  security-scan.yml  skills.yml  trainer.yml  ui.yml
application/: README.md
application/backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
application/backend/docs/: distribution.md
application/backend/scripts/: build_package.sh  hatch_build.py
application/backend/src/: cli.py  exception_handlers.py  exceptions.py  main.py  settings.py  storage_migration.py
application/backend/src/alembic/versions/: a7c1e9f4b2d3_restrict_env_robot_camera_fks.py  c9d8e7f6a5b4_backfill_so101_calibration_into_payload.py  e1f2a3b4c5d6_environment_join_tables.py
application/backend/src/api/: dataset.py  dataset_import.py  dependencies.py  hardware.py  models.py  project.py  record.py  robot_catalog.py  robot_control.py  robot_setup.py  system.py
application/backend/src/cli/: __init__.py  database.py  run.py  serve.py
application/backend/src/control/: environment_integration.py
application/backend/src/core/logging/: handlers.py
application/backend/src/db/: schema.py
application/backend/src/internal_datasets/: access_mode.py  utils.py
application/backend/src/internal_datasets/lerobot/: lerobot_dataset.py  streaming_encoding_settings.py
application/backend/src/models/: utils.py
application/backend/src/repositories/: base.py  project_environment_repo.py
application/backend/src/repositories/mappers/: project_environment_mapper.py  project_robot_mapper.py
application/backend/src/robots/: physicalai_adapter.py  robot_client_factory.py  robot_service.py
application/backend/src/robots/catalog/: assets.py  registry.py  so101.py  sync_robot_assets.py  types.py  widowxai.py
application/backend/src/robots/discovery/: manager.py
application/backend/src/schemas/: __init__.py  environment.py  hardware.py  job.py  robot.py
application/backend/src/services/: __init__.py  event_processor.py  job_service.py  model_import_service.py  project_camera_service.py  robot_catalog_service.py  staged_archive.py  system_service.py  training_service.py
application/backend/src/services/dataset_import/: README.md  service.py
application/backend/src/services/dataset_import/adapters/: __init__.py  base.py  lerobot_v3.py
application/backend/src/services/training_backends/: __init__.py  _log_format.py  _training_methods.py  _transfer_progress.py  base.py  local.py  remote.py
application/backend/src/utils/: serial_robot_tools.py
application/backend/src/workers/: dataset_import_worker.py  model_worker.py  robot_control_worker.py  teleoperate_worker.py  training_worker.py
application/backend/src/workers/robots/: so101_setup_worker.py
application/backend/tests/: test_settings.py  test_storage_migration.py
application/backend/tests/api/: test_dataset_import_upload_safety.py  test_hardware.py  test_robot_catalog.py
application/backend/tests/cli/: test_run.py  test_serve.py
application/backend/tests/core/logging/: test_handlers.py
application/backend/tests/internal_datasets/: test_lerobot_dataset.py  test_lerobot_dataset_thumbnail.py  test_utils.py
application/backend/tests/models/: test_utils.py
application/backend/tests/repositories/: test_project_environment_repo.py
application/backend/tests/repositories/mappers/: test_project_robot_mapper_bimanual.py
application/backend/tests/robots/: test_bimanual_widowxai_adapter.py  test_catalog_assets.py  test_robot_adapter.py  test_sync_robot_assets.py
application/backend/tests/services/: test_local_training_backend.py  test_model_import_service.py  test_remote_training_backend.py  test_system_service.py  test_training_backends.py  test_training_log_format.py  test_training_service_reattach.py
application/backend/tests/services/dataset_import/: test_dataset_import_disk_guardrails.py  test_dataset_import_service.py
application/backend/tests/services/dataset_import/adapters/: test_lerobot_v3_adapter.py  test_select_dataset_import_adapter.py
application/backend/tests/workers/: test_teleoperate_worker.py  test_training_worker.py
application/docker/: .env.example  Dockerfile
application/docs/: 01-installation.md  08-virtual-usb-ports.md
application/trainer/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
application/trainer/src/trainer/: __init__.py  api.py  cli.py  devices.py  main.py  queue_worker.py  runner.py  schemas.py  settings.py  store.py
application/trainer/tests/: conftest.py  test_api_upload.py  test_cli.py  test_devices.py  test_queue_worker.py  test_schemas.py  test_store.py
application/ui/: .gitignore  .pre-commit-config.yaml  AGENTS.md  package-lock.json  package.json  rsbuild.config.ts  vitest.config.ts
application/ui/src/: setup-tests.ts
application/ui/src/api/: client.ts  errors.ts  utils.ts
application/ui/src/components/: elapsed-duration.component.test.tsx  elapsed-duration.component.tsx
docs/development/: README.md  coding-standards.md
skills/: README.md
skills/application/: README.md
(+109 files in other folders)
