[project]
name = "physicalai-studio"
version = "0.1.0"
description = "Physical AI Studio"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
  "opencv-python",
  "cv2-enumerate-cameras",
  'harvesters; sys_platform != "darwin"',
  "fastapi[standard]<1",
  "physicalai[robots, capture]",
  "physicalai-train",
  "lerobot[dataset,feetech]==0.6.0",
  "torchcodec==0.11.1",
  "numpy",
  "websockets",
  'pyrealsense2-macosx; sys_platform == "darwin"',
  'pyrealsense2; sys_platform != "darwin"',
  "aiortc>=1.13.0",
  "pydantic>=2.12,<2.13",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
  "aiosqlite~=0.21",
  "alembic>=1.16.5",
  "click>=8.3.0",
  "loguru>=0.7.3",
  "greenlet>=3.2.4",
  "tenacity>=9.1.2",
  "aiofiles>=25.1.0",
  "types-aiofiles>=25.1.0.20251011",
  "sse-starlette>=2.0.0",
  "huggingface-hub>=0.27",
  "psutil~=7.2",
]

[project.scripts]
physicalai-studio = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
exclude = [
  "src/**/*.egg-info/**",
  "src/**/__pycache__/**",
]

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[project.optional-dependencies]
train = [
  "physicalai-train[pi0,smolvla]",
  "executorch>=1.1.0",
  "torchao===0.15.0",
]
cpu = [
    "torch>=2.11,<2.12",
    "torchvision>=0.26,<0.27",
]
cuda = [
    "torch>=2.11,<2.12",
    "torchvision>=0.26,<0.27",
]
xpu = [
    "torch>=2.11,<2.12",
    "torchvision>=0.26,<0.27",
    "pytorch-triton-xpu ; sys_platform == 'linux' or sys_platform == 'win32'",
]

tests = [
    "pytest",
]


# --- PyTorch index configuration ---
# torch/torchvision are transitive dependencies of the base install via lerobot
# (and additionally via lightning when the `train` extra is installed). They are
# present even on recording-only nodes, so the cpu/cuda/xpu extras below are
# always required: they are the only mechanism that pins torch/torchvision to the
# correct hardware-specific PyTorch index. Without selecting one, torch defaults
# to the wrong wheel (e.g. the fat CUDA wheel on Linux, or a `+xpu` build from the
# non-explicit XPU index). These extras are independent of the `train` extra:
# combine them, e.g. `--extra cuda` (recording) or `--extra cuda --extra train`.
# Source routing must be declared in the consumer project because uv does not
# propagate [tool.uv.sources] from path dependencies (uv #14675).
#
# PyPI is listed first as a named default index so that it takes priority
# over the non-explicit pytorch-xpu index in unsafe-best-match resolution.
# Without this, the XPU index can shadow PyPI packages with incompatible
# wheels (e.g. markupsafe cp314-only, see uv #9647).
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = false

[tool.uv.sources]
physicalai-train = { path = "../../library", editable = true }
physicalai = { git = "https://github.com/openvinotoolkit/physicalai.git", rev = "08fcd96389fa9e326946df6affc5c19c4c731633" }
# Keep torchao on PyPI for all extras.
# The XPU index publishes `torchao` local-version wheels (e.g. `+xpu`) that can
# be selected via unsafe-best-match even for non-XPU installs (like `--extra cuda`),
# producing incompatible torch/torchao combinations at runtime.
torchao = { index = "pypi" }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cuda" },
    { index = "pytorch-xpu", extra = "xpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cuda" },
    { index = "pytorch-xpu", extra = "xpu" },
]
pytorch-triton-xpu = [{ index = "pytorch-xpu", extra = "xpu" }]

[dependency-groups]
dev = [
  "ruff~=0.11.2",
  "pyrefly>=0.18.0",
  "types-PyYAML>=6.0.12.20250915",
]
lint = [
  "ruff~=0.11.2",
  "mypy~=1.17",
  "pyrefly>=0.18.0",
  "types-PyYAML>=6.0.12.20250915",
]
all = [
  "ruff~=0.11.2",
  "mypy~=1.17",
  "pyrefly>=0.18.0",
  "types-PyYAML>=6.0.12.20250915",
]

[tool.uv]
package = true
default-groups = ["all"]
exclude-newer = "7 days"
# The pytorch-xpu index is non-explicit (explicit = false) because
# transitive deps like pytorch-triton-xpu only exist on the XPU index.
# unsafe-best-match is required because PyTorch indexes can host stale
# copies of common packages; best-match avoids index-order shadowing.
#
# To prevent the XPU index from providing incompatible wheels for
# common packages (e.g. markupsafe cp314-only, see uv #9647), PyPI
# is listed as a named index with higher priority above.
index-strategy = "unsafe-best-match"
override-dependencies = [
    # executorch>=1.1.0 requires pytest<9.0 (its own test-suite constraint),
    # Safe to override because executorch
    # production code does not import pytest at runtime.
    "pytest>=9.0.3",
    # lerobot==0.5.1 caps diffusers at <0.36.0, 0.38.0 contains CVE-2026-44827 fix
    "diffusers>=0.38.0",
]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "xpu" },
    ],
]

# ============================================================================ #
# RUFF CONFIGURATION                                                           #
# ============================================================================ #
[tool.ruff]
# Extend shared configuration from root
extend = "../../pyproject.toml"

# Disable preview mode for backend (inherited as true from root)
preview = false

# Backend-specific source directories
src = ["src"]

# Backend-specific excludes
extend-exclude = [".venv*"]

[tool.ruff.lint]
# Backend uses a subset of rules (different from library's ALL)
select = [
    "ARG", "E", "F", "I", "N", "UP", "YTT", "ASYNC", "S", "COM", "C4", "FA",
    "PIE", "PYI", "Q", "RSE", "RET", "SIM", "TID", "TC", "PL", "RUF", "C90",
    "D103", "ANN001", "ANN201", "ANN205", "FAST"
]

ignore = [
    "N801", "N805", "N806", "N807", "N818", "COM812", "RET503", "SIM108",
    "SIM105", "PLR2004", "RUF010", "TC001", "RUF012"
]

fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S", "ANN", "D", "ARG", "PLR"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pylint]
max-args = 7


# ============================================================================ #
# MYPY CONFIGURATION                                                           #
# ============================================================================ #
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
show_error_codes = true

[tool.pyrefly]
python-version = "3.13"
search-path = ["src"]
project-includes = ["src"]
project-excludes = [
  "src/alembic/versions/**",
  ".venv/**",
  "dist/**",
]
replace-imports-with-any = ["trossen_arm"]

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "--showlocals", "-ra"]
testpaths = "tests"
pythonpath = "src"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_download: marks tests that require downloading external datasets",
    "integration: marks tests as integration tests",
]
filterwarnings = [
  "ignore:XPU device count is zero!:UserWarning",
  "ignore:This process.*is multi-threaded:DeprecationWarning", # using actual queues in tests
  "ignore:ResourceTracker called reentrantly:UserWarning", # CPython 3.12 bug (gh-109981): semaphore cleanup races during GC at shutdown
]
